# siren-music-download

./: CLAUDE.md  Cargo.toml  README.md  UI_DESIGN.md  package.json  vite.config.ts
.github/workflows/: ci.yml  distribute.yml
crates/siren-core/: Cargo.toml
crates/siren-core/src/: api.rs  audio.rs  downloader.rs  lib.rs
crates/siren-core/tests/: audio_flac.rs  download_service_scenarios.rs  local_inventory_badges.rs
doc/: BACKEND_API_CONTRACT.md  BACKEND_API_PLAN.md  BACKEND_API_PRD.md  BACKEND_COMPLETED_PHASES.md  BACKEND_PENDING_PHASES.md  BACKEND_ROADMAP.md  BUN_MIGRATION_PLAN.md  FRONTEND_GUIDE.md  TEST_SYSTEM_REORGANIZATION.md  UI_REFACTOR_QA_CHECKLIST.md
doc/guides/: claude-code-hook-setup.md  frontend-guide.md  i18n-inventory.md  i18n-migration-plan.md
doc/reference/: backend-api-contract.md
messages/: en-US.json  zh-CN.json
scripts/claude-hooks/: format-apply-pre-commit-wrapper.mjs  format-apply-pre-commit.mjs  format-check-stop-warning-wrapper.mjs  format-check-stop-warning.mjs
src/: App.svelte  api.rs  app.css  audio.rs  downloader.rs  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  audio_cache.rs  lib.rs  local_inventory.rs  logging.rs  main.rs  preferences.rs  tag_registry.rs  theme.rs
src-tauri/src/commands/: downloads.rs  homepage.rs  library.rs  mod.rs  playback.rs  tag_registry.rs
src-tauri/src/downloads/: bridge.rs
src-tauri/src/player/: mod.rs  (+5 more)
src/lib/: api.ts  lazyLoad.ts  settingsApi.ts  theme.ts  types.ts
ui/: app.slint
(+47 files in other folders)
